--- a/config/config.json
+++ b/config/config.json
@@ -13,17 +13,29 @@
     }
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "username": "hsqmg_user",
+    "password": "w6xQom9Ev8WQ6bMWcPPLUa8PvL0ZkNyc",
+    "database": "hsqmg",
+    "host": "dpg-cp2het6v3ddc73cmc1i0-a.oregon-postgres.render.com",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "postgres"
+    "username": "hsqmg_user",
+    "password": "w6xQom9Ev8WQ6bMWcPPLUa8PvL0ZkNyc",
+    "database": "hsqmg",
+    "host": "dpg-cp2het6v3ddc73cmc1i0-a.oregon-postgres.render.com",
+    "dialect": "postgres",
+    "dialectOptions": {
+      "ssl": {
+        "require": true,
+        "rejectUnauthorized": false
+      }
+    }
   }
 }
