--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "hsqmg_user",
-    "password": "w6xQom9Ev8WQ6bMWcPPLUa8PvL0ZkNyc",
-    "database": "hsqmg",
-    "host": "dpg-cp2het6v3ddc73cmc1i0-a.oregon-postgres.render.com",
+    "username": "hsqm_z1hv_user",
+    "password": "Y8vdSmeHoiKcCw8878t8HQUf13E30Jeg",
+    "database": "hsqm_z1hv",
+    "host": "dpg-cpom7g2j1k6c73aa7jmg-a.oregon-postgres.render.com",
     "dialect": "postgres",
     "dialectOptions": {
       "ssl": {
@@ -13,10 +13,10 @@
     }
   },
   "test": {
-    "username": "hsqmg_user",
-    "password": "w6xQom9Ev8WQ6bMWcPPLUa8PvL0ZkNyc",
-    "database": "hsqmg",
-    "host": "dpg-cp2het6v3ddc73cmc1i0-a.oregon-postgres.render.com",
+    "username": "hsqm_z1hv_user",
+    "password": "Y8vdSmeHoiKcCw8878t8HQUf13E30Jeg",
+    "database": "hsqm_z1hv",
+    "host": "dpg-cpom7g2j1k6c73aa7jmg-a.oregon-postgres.render.com",
     "dialect": "postgres",
     "dialectOptions": {
       "ssl": {
@@ -26,10 +26,10 @@
     }
   },
   "production": {
-    "username": "hsqmg_user",
-    "password": "w6xQom9Ev8WQ6bMWcPPLUa8PvL0ZkNyc",
-    "database": "hsqmg",
-    "host": "dpg-cp2het6v3ddc73cmc1i0-a.oregon-postgres.render.com",
+    "username": "hsqm_z1hv_user",
+    "password": "Y8vdSmeHoiKcCw8878t8HQUf13E30Jeg",
+    "database": "hsqm_z1hv",
+    "host": "dpg-cpom7g2j1k6c73aa7jmg-a.oregon-postgres.render.com",
     "dialect": "postgres",
     "dialectOptions": {
       "ssl": {
